ecmascript/parser/tests/test262-error-references/fail/65a73ccacb2dc502.js.stderr
error: Expected {, got [
 --> $DIR/tests/test262-parser/fail/65a73ccacb2dc502.js:1:8
  |
1 | (class [a] {})
  |        ^

